<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.ChipGroup
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:singleSelection="true"
    android:id="@+id/habit_category_chip_group">

    <com.google.android.material.chip.Chip
        style="@style/Chip.Filter.Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/category_house_chore"
        android:id="@+id/house_chore_button"
        app:chipBackgroundColor="@color/tagYellow"
        app:chipStrokeColor="@color/tagYellow"
        app:chipIconVisible="true"
        app:chipIconTint="@color/tagWhite"/>
    <com.google.android.material.chip.Chip
        style="@style/Chip.Filter.Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/category_work"
        android:id="@+id/work_button"
        app:chipBackgroundColor="@color/tagBlue"
        app:chipStrokeColor="@color/tagBlue"
        app:chipIconVisible="true"
        app:chipIconTint="@color/tagWhite"/>
    <com.google.android.material.chip.Chip
        style="@style/Chip.Filter.Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/category_hobby"
        android:id="@+id/hobby_button"
        app:chipBackgroundColor="@color/tagRed"
        app:chipStrokeColor="@color/tagRed"
        app:chipIconVisible="true"
        app:chipIconTint="@color/tagWhite"/>
    <com.google.android.material.chip.Chip
        style="@style/Chip.Filter.Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/category_learning"
        android:id="@+id/learning_button"
        app:chipBackgroundColor="@color/tagOrange"
        app:chipStrokeColor="@color/tagOrange"
        app:chipIconVisible="true"
        app:chipIconTint="@color/tagWhite"/>
    <com.google.android.material.chip.Chip
        style="@style/Chip.Filter.Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/category_fitness"
        android:id="@+id/fitness_button"
        app:chipBackgroundColor="@color/tagGreen"
        app:chipStrokeColor="@color/tagGreen"
        app:chipIconVisible="true"
        app:chipIconTint="@color/tagWhite"/>
    <com.google.android.material.chip.Chip
        style="@style/Chip.Filter.Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/category_finance"
        android:id="@+id/finance_button"
        app:chipBackgroundColor="@color/tagPurple"
        app:chipStrokeColor="@color/tagPurple"
        app:chipIconVisible="true"
        app:chipIconTint="@color/tagWhite"/>
    <com.google.android.material.chip.Chip
        style="@style/Chip.Filter.Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/category_health"
        android:id="@+id/health_button"
        app:chipBackgroundColor="@color/tagPink"
        app:chipStrokeColor="@color/tagPink"
        app:chipIconVisible="true"
        app:chipIconTint="@color/tagWhite"/>
</com.google.android.material.chip.ChipGroup>