<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/incomplete_mission_header"
                android:text="@string/daily_missions"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:gravity="start"
                style="@style/HeaderTextStyle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/incomplete_mission_header"
                android:padding="10dp"
                android:id="@+id/mission_recyclerview"/>

            <TextView
                android:id="@+id/empty_missions_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mission_recyclerview"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/empty_mission_text"
                style="@style/Article.BodyTextStyle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completed_missions"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="20dp"
                android:gravity="start"
                android:layout_below="@+id/empty_missions_text"
                android:id="@+id/completed_mission_header"
                style="@style/HeaderTextStyle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/completed_mission_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/completed_mission_header"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="0dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/empty_completed_missions_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/completed_mission_recyclerview"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/empty_completed_missions_text"
                style="@style/Article.BodyTextStyle" />
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>